ENHANCEMENT: Added Facebook event cover support. Added new page type Facebook EventsPage to display upcoming and past events and to show event details.  Events will be added as JSON+LD data to the HTML source code to provide enhanced SEO relevant content. Added Widget to display upcoming events.

--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -3,5 +3,6 @@ Name: silvercart-facebook-plugins-routes
 ---
 SilverStripe\Control\Director:
   rules:
+    'fb/events//$Action!/$Type!/$Offset!/$Length!': SilverCart\FacebookPlugins\Control\EventsController
     'facebook/dev//$Action/$ID': SilverCart\FacebookPlugins\Dev\Tasks\DevTask
     'facebook/events//$Action/$ID': SilverCart\FacebookPlugins\Dev\Tasks\EventsTask
