--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     "require": {
         "facebook/graph-sdk": "^5.6",
         "silvercart/silvercart": "~4.1"
+    },
+    "extra": {
+        "expose": [
+            "client"
+        ]
     }
 }
