MINOR: Updated composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "silvercart/facebook-plugins",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "description": "Facebook plugins module for the SilverCart ecommerce module for SilverStripe",
     "homepage": "http://www.silvercart.org",
     "license": "LGPL-3.0",
